--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,431 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Cherry+Bomb+One&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,800&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900;6..12,1000&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;500;600;700;800;900&family=Yantramanav:wght@100;300;400;500;700;900&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none !important;
+  list-style: none !important;
+  box-sizing: border-box !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-img {
+  background-image: url(assets/images/bg-img.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.pt-27 {
+  padding-top: 27px;
+}
+
+.gap-80 {
+  gap: 80px;
+}
+
+.icon:hover {
+  transform: translateY(-30%);
+  transition: 500ms linear;
+}
+
+.lh-100 {
+  line-height: 100%;
+}
+
+.lh-150 {
+  line-height: 150%;
+}
+
+
+.buddy-card {
+  border-radius: 20px;
+  background: var(--color-blue);
+  padding: 39px 39px 150px 39px;
+  height: 495px;
+}
+
+/* max-width */
+.max-w-347 {
+  max-width: 347px;
+}
+
+.op-7 {
+  opacity: 0.7;
+}
+
+.max-w-515 {
+  max-width: 515px;
+}
+
+.max-w-457 {
+  max-width: 457px;
+}
+
+.btn-1 {
+  width: 225px;
+  border-radius: 45.5px;
+  background: #FFF;
+  padding: 16px 40px;
+  border: none;
+}
+
+.lh-136 {
+  line-height: 136%;
+}
+
+.op-5 {
+  opacity: 0.5;
+}
+.max-w388{
+  max-width: 388px;
+}
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.text-strike {
+  text-decoration-line: line-through !important;
+}
+
+.btn-2 {
+  padding: 10px 20px;
+  border-radius: 45.5px;
+  background: var(--color-white);
+  border: none;
+}
+
+.w-img {
+  width: 85%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.overflow {
+  overflow-x: clip;
+}
+.max-w-404{
+  max-width: 404px;
+}
+.max-w-786{
+  max-width: 786px;
+}
+.icon2:hover{
+  transform: translateY(20%);
+}
+.icon2{
+  transition: all 300ms linear;
+}
+
+.links {
+  position: relative;
+}
+
+.links::after {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 0%;
+  background-color: white;
+  left: 0;
+  bottom: 0px;
+  transition: 400ms all linear;
+}
+
+.links:hover::after {
+  width: 100%;
+}
+
+@media (max-width:992px) {
+
+  label[for="menubar"] {
+    display: flex;
+    width: 30px;
+    height: 25px;
+    flex-direction: column;
+    z-index: 3;
+    cursor: pointer;
+    justify-content: space-between;
+  }
+
+  label[for="menubar"]>span {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    width: 5px;
+    height: 100%;
+    z-index: 2;
+    cursor: pointer;
+
+  }
+
+  label[for="menubar"]>span {
+    width: 100%;
+    height: 2px;
+    border-radius: 5px;
+    background: var(--color-white);
+  }
+
+  .z-index-3 {
+    z-index: 3;
+  }
+
+  .mobile-view {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-blue);
+    flex-direction: column;
+    z-index: 2;
+    transition: all 200ms linear;
+  }
+
+  input[type="checkbox"][id="menubar"]:checked+ul.mobile-view {
+    left: 0;
+    pointer-events: all;
+    opacity: 1;
+  }
+
+  .pos-fix {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 4;
+    background-color: #FFFDED;
+    width: 100% !important;
+  }
+
+  .text-c-center {
+    text-align: center;
   }
 }
+.opacity-60{
+  opacity: 60%;
+}
+.footer-bg{
+  background-image: url("./assets/images/footer-bg.png");
+  /* background-position: center; */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.pt-100{
+  padding-top: 100px;
+}
+:root {
+  /* font-size */
+  --fs-xs: 16px;
+  --fs-s: 18px;
+  --fs-sm: 20px;
+  --fs-md: 21px;
+  --fs-lg: 25px;
+  --fs-2lg: 30px;
+  --fs-xl: 50px;
+  --fs-xxl: 70px;
+  /* color  */
+  --color-white: #fff;
+  --color-navyblue: #001D49;
+  --color-blue2: #000A1A;
+  --color-blue: #031227;
+  --color-skyblue: #009dff;
+  /* font-family  */
+  --ff-poppins: 'poppins', sans-serif;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.fs-xs {
+  font-size: var(--fs-xs) !important;
+}
+
+.fs-s {
+  font-size: var(--fs-s) !important;
+}
+
+.fs-sm {
+  font-size: var(--fs-sm) !important;
+}
+
+.fs-md {
+  font-size: var(--fs-md) !important;
+}
+
+.fs-lg {
+  font-size: var(--fs-lg) !important;
+}
+
+.fs-2lg {
+  font-size: var(--fs-2lg) !important;
+}
+
+.fs-xl {
+  font-size: var(--fs-xl) !important
+  ;
+}
+
+.fs-xxl {
+  font-size: var(--fs-xxl) !important;
+}
+
+.bg-blue {
+  background-color: var(--color-blue);
+}
+
+.bg-skyblue {
+  background-color: var(--color-skyblue);
+}
+
+.color-white {
+  color: var(--color-white);
+}
+
+.bg-white {
+  background-color: var(--color-white);
+}
+
+.color-navyblue {
+  color: var(--color-navyblue);
+}
+
+.bg-blue2 {
+  background-color: var(--color-blue2);
+}
+
+.ff-poppins {
+  font-weight: var(--ff-poppins);
+}
+.main-timeline {
+  position: relative;
+}
+
+.main-timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  top: 3%;
+  bottom: 27%;
+  left: 50%;
+  margin-left: -3px;
+  border-right: 2px dashed white;
+}
+
+.timeline {
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  right: -23px;
+  background-color: var(--color-skyblue);
+  border: 3px solid var(--color-white);
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.left {
+  padding: 0px 40px 20px 0px;
+  left: 0;
+}
+
+.right {
+  padding: 0px 0px 20px 40px;
+  left: 50%;
+}
+
+.right::after {
+  left: -20px;
+}
+
+.gap-80 {
+  gap: 80px;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.body {
+  background-color: var(--bg-blue);
+}
+.container2{
+  max-width: 830px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.accordion-flush .accordion-item .accordion-button,
+.accordion-flush .accordion-item .accordion-button.collapsed {
+  background: #031227;
+  border-radius: 150px !important;
+}
+
+.accordion-flush .accordion-collapse {
+  border-color: transparent !important;
+}
+
+.accordion-flush .accordion-item {
+  background: transparent;
+}
+
+.accordion-item {
+  border: none !important;
+  background-color: #000a1a;
+}
+
+.accordion-button:hover {
+  border: transparent;
+}
+
+.accordion-button:not(.collapsed) {
   color: white;
+  box-shadow: none !important;
 }
 
-.App-link {
-  color: #61dafb;
+.accordion-button:focus {
+  border-color: transparent !important;
+  box-shadow: none !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.accordion-button::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white' %3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+}
+ @media screen and (max-width: 600px) {
+  .main-timeline::after {
+    left: 31px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .timeline {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  .timeline::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  .left::after,
+  .right::after {
+    left: 12px;
+  }
+
+  .left::before {
+    right: auto;
+  }
+
+  .right {
+    left: 0%;
   }
 }
